# list-pet

./: .gitignore  AI-Human-Collaboration.md  README.md  app.py  chat.py  checkpoint_db.py  commands.py  database.py  environment.yml  fine-tuning.md  markup.py  parse.py  pgconntest.py  plotting.py  proto.py  purge_db.py  requirements.txt  run_tests.py  settings.env.example  training-strategy.md  ui-design.md
.streamlit/: config.toml
data/: amr_controls.csv  context.json  playlist.csv  playlist.numbers  us_counties.geojson
examples/: coding_rules.txt  header.txt  main_prompt.txt  map_example.md  propcess_includes.py
markdown/: memo-rag-project-plan.md  recall.md
notebooks/: my_database.db.wal  queries.ipynb
old_prompts/: first.jsonl  first.txt
playbook/: violin.txt
playbooks/: to_csv.py
prompts/: example.txt  first.txt  gis.txt  instructions.txt  memory_system_prompt.txt  memory_welcome_message.txt  metadata_section.txt  parse.py  system.json  system.txt  system.txt.bak  system.txt.old  system_prompt.txt  system_with_maps.txt  title.txt  welcome_message.txt
rules/: test-guidelines.md
src/: analytic_database.py  analytic_factory.py  chart_renderer.py  chat.py  commands.py  constants.py  conversation_manager.py  database.py  duckdb_analytic.py  llm_handler.py  mapping.py  message_manager.py  metadata_database.py  metadata_manager.py  parse.py  parsing.py  plotting.py  postgresql_analytic.py  prompt_loader.py  python_executor.py  response_processor.py  sql_utils.py  streamlit_app.py  streamlit_ui.py  test_config.py  (+2 more)
tools/ft-pipe/: cli.py  pyproject.toml
(+44 files in other folders)
