[project]
name = "ft-pipe"
version = "0.1.0"
description = "Command-line utility for OpenAI fine-tuning with gpt-4o-mini"
authors = [{ name = "Mark Wallace" }]
dependencies = [
    "typer[all]",  # includes click and colorama for better CLI support
    "openai>=1.0.0",  # optional: pin to modern versions
    "tiktoken"
]
requires-python = ">=3.9"

[project.scripts]
ft-pipe = "cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
